--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 </ul>
               </div>
 
-              <a href=""><small class="premium"><span class="underline text-muted"><i class="fa fa-tasks"></i> Bagaimana agar buku dipromosikan?</span></small></a>
+              <a href=""><small class="premium"><span class="underline text-muted"><i class="fa fa-tasks"></i> Ingin buku anda dipromosikan?</span></small></a>
             </div>
           </div>
           <div class="col-md-8 col-sm-12 col-xs-12 no-page-padding">
