--- a/pages/onePageForum.html
+++ b/pages/onePageForum.html
@@ -88,7 +88,7 @@
             <small class="secondary-color">Diskusi, tanya buku Lorem ipsum dolor sit amet.</small>
           </div>
           <div class="col-md-12 first-content">
-            <div class="col-md-8 no-padding">
+            <div class="col-md-8">
               <div class="col-md-2 text-center space space-left">
                 <div class="img-wrapper">
                   <img src="../assets/bg.jpeg" class="img-responsive img-circle profilphoto" alt="Profil Photo">
@@ -103,6 +103,19 @@
               </div>
               <div class="clearfix"></div>
               <div class="block garisbawah first-content"><p class="answer text-primary">Jawaban</p></div>
+              <div class="coment text-right clearfix">
+                <div class="col-md-2 no-padding text-center">
+                  <div class="img-wrapper">
+                    <img src="../assets/bg.jpeg" class="img-responsive img-circle profilphoto" alt="Profil Photo">
+                  </div>
+                </div>
+                <div class="col-md-10 no-padding text-right">
+                  <div class="buble">
+                    <textarea name="" placeholder="Tambahkan komentar.." class="form-control"></textarea>
+                  </div>
+                  <button class="btn btn-md btn-primary first-content">Post</button>
+                </div>
+              </div>
               <ul>
                 <li>
                   <div class="col-md-2 text-center">
@@ -114,8 +127,9 @@
                   </div>
                   <div class="col-md-10 no-padding">
                     <div class="buble">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, molestias, inventore. Voluptate, consequatur, eveniet commodi vero maiores aperiam enim eius repudiandae ipsa, voluptatum laboriosam repellat libero beatae optio saepe amet.</p>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos fuga excepturi aut. Veritatis incidunt eveniet cum velit suscipit, tempore soluta.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, molestias, inventore. Voluptate, consequatur, eveniet commodi vero maiores aperiam enim eius repudiandae ipsa, voluptatum laboriosam repellat libero beatae optio saepe amet.</p>
                     </div>
+                    <small class="block text-right time"><i>16 Mei 2017</i></small>
                   </div>
                 </li>
               </ul>
