--- a/pages/produk.html
+++ b/pages/produk.html
@@ -21,9 +21,9 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <body style="background:#eee">
     <!-- nav -->
-    <nav id="top-bar" class="navbar navbar-hidden" data-nav-status="toggle">
+    <nav id="top-bar" class="navbar navbar-default navbar-fixed-top" data-nav-status="toggle">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -33,7 +33,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">GEDEBUK</a>
+          <a class="navbar-brand" href="../index.html">GEDEBUK</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -56,8 +56,17 @@
     <section class="produk">
       <div class="container">
         <div class="row">
+          <div class="col-md-12">
+            <div class="alert alert-default">
+              <ul class="breadcrumb">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Kategori</a></li>
+                <li><a href="#">Produk</a></li>
+              </ul>
+            </div>
+          </div>
           <div class="col-md-3">
-            <div class="photo-wrapper">
+            <div class="photo-wrapper thumbnail">
               <img src="../assets/bg.jpeg" class="img-responsive img-thumbnail" alt="">
             </div>
             <table class="table table-bordered">
