--- a/pages/upload.html
+++ b/pages/upload.html
@@ -56,11 +56,11 @@
         <!-- category -->
     <section class="upload">
       <div class="container">
+        <div class="add-space">
+          <h2 class="text-primary">Posting buku</h2>
+          <small class="secondary-color">Cara mudah meluaskan manfaat. Pinjamkan buku anda kepada orang yang lebih membutuhkan.</small>
+        </div>
         <div class="row">
-          <div class="col-md-12 add-space">
-            <h2 class="text-primary">Posting buku</h2>
-            <small class="secondary-color">Cara mudah meluaskan manfaat. Pinjamkan buku anda kepada orang yang lebih membutuhkan.</small>
-          </div>
           <form autocomplete="on">
           <div class="col-md-3 panelkiri">
             <h4 class="text-primary">Foto</h4>
