landing, index msh berantakan

--- a/pages/produk.html
+++ b/pages/produk.html
@@ -61,7 +61,7 @@
               <ul class="breadcrumb">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Kategori</a></li>
-                <li><a href="#">Produk</a></li>
+                <li class="active">Produk</li>
               </ul>
             </div>
           </div>
