--- a/pages/signup.html
+++ b/pages/signup.html
@@ -109,8 +109,10 @@
                 </div>
                 <button type="button" class="btn btn-lg btn-primary center-block" name="button">Daftar</button>
               </div>
+            </div>
 					</form>
 				</div>
+      </div>
 		</section>
     <footer>
       <section class="dark">
