--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   </head>
   <body>
     <!-- nav -->
-    <nav id="home-bar" class="navbar navbar-hidden" data-nav-status="toggle">
-      <div class="container">
+    <nav id="home-bar" class="navbar navbar-hidden navbar-default navbar-fixed-top" data-nav-status="toggle">
+      <div class="navpad container-fluida">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
@@ -37,16 +37,26 @@
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="menu">
-          <form class="navbar-form navbar-left search">
+          <form class="navbar-form navbar-left search none" id="input">
             <div class="form-group">
-              <input type="text" id="input" class="form-control" placeholder="Cari judul buku/nama pengarang">
+              <input type="text" class="form-control" placeholder="Cari judul buku/nama pengarang">
             </div>
             <button type="submit" class="btn btn-default">Cari</button>
           </form>
           <ul class="nav navbar-nav navbar-right">
             <li><a  href="pages/forum.html">Forum</a></li>
             <li><a id="pad" href="pages/login.html"><button type="button" class="btn btn-primary btn-login" name="button">Login</button></a></li>
-            <li><a  href="pages/signup.html"><span class="text-warning">Daftar</span></a></li>
+            <li><a  href="pages/signup.html">Pesan <span class="badge">2</span></a></li>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="pages/login.html">Account <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li class="account"><a href="#"><i class="fa fa-fw fa-2x fa-user-circle-o"></i> Account</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#"><i class="fa fa-fw fa-lock"></i> Privacy</a></li>
+                <li><a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a></li>
+                <li><a href="#" class="">Log Out</a></li>
+              </ul>
+            </li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -57,15 +67,25 @@
     <header class="parallax-window" data-parallax="scroll" data-speed="0.2" data-image-src="assets/bg.jpeg">
       <div class="cover">
         <div class="container first-content">
-          <div class="fly hidden-xs">
-            <ul>
+          <!-- <div class="fly hidden-xs">
+            <ul class="">
               <li class="pull-left"><a href="pages/login.html"><i class="fa fa-gg"></i> Gedebuk</a></li>
+              <li class="pull-right dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="pages/login.html">Account <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li class="account"><a href="#"><i class="fa fa-fw fa-2x fa-user-circle-o"></i> Account</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="#"><i class="fa fa-fw fa-lock"></i> Privacy</a></li>
+                  <li><a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a></li>
+                  <li><a href="#" class="">Log Out</a></li>
+                </ul>
+              </li>
+              <li class="pull-right"><a href="pages/login.html">Pesan <span class="badge">3</span></a></li>
               <li class="pull-right"><a href="pages/login.html">Log In</a></li>
-              <li class="pull-right"><a href="pages/signup.html">Daftar</a></li>
             </ul>
-          </div>
+          </div> -->
           <div class="headerfooter">
-            <abbr title="Temukan kami di facebook!"><a class="sosmed fb" href="https://www.facebook.com/gedebuk"><img src="assets\fb.png" alt="Share to Facebook"></a></abbr>
+            <abbr title="Temukan kami di facebook!"><a class="sosmed" href="https://www.facebook.com/gedebuk"><img src="assets\fb.png" alt="Share to Facebook"></a></abbr>
             <abbr title="Temukan kami di Instagram"><a class="sosmed" href="https://instagram.com/gedebuk"><img src="assets\ig.png" alt="Share to Instagram"></a></abbr>
             <abbr title="Temukan kami di twitter!"><a class="sosmed" href="https://twitter.com/gedebuk"><img src="assets\tw.png" alt="Share to Twiter"></a></abbr>
           </div>
@@ -78,7 +98,6 @@
               <li><a href="#" class="underline"><i class="fa fa-li fa-list"></i> Pertanyaan 3</a></li>
               <li><a href="#" class="underline"><i class="fa fa-li fa-list"></i> Pertanyaan 4</a></li>
               <li><a href="#" class="underline"><i class="fa fa-li fa-list"></i> Pertanyaan 5</a></li>
-              <li role="separator" class="divider first-content"></li>
               <h6>SOLVED</h6>
               <li><a href="#" class="underline"><i class="fa fa-li fa-list"></i> Pertanyaan 1 [SOLVED]</a></li>
               <li><a href="#" class="underline"><i class="fa fa-li fa-list"></i> Pertanyaan 2</a></li>
@@ -111,11 +130,11 @@
                   </div>
                   <div class="col-md-12 col-sm-12 col-xs-12 populer">
                     <p class="inline secondary-colorwhite caripopuler">Pencarian populer : </p>
-                    <ul class="">
-                      <li><a href="#"><p class="inline caripopuler text-primary">uin</p></a></li>
-                      <li><a href="#"><p class="inline caripopuler text-warning">maulana</p></a></li>
-                      <li><a href="#"><p class="inline caripopuler text-danger">malik</p></a></li>
-                      <li><a href="#"><p class="inline caripopuler text-success">ibrahim</p></a></li>
+                    <ul>
+                      <li><a href="#">uin</a></li>
+                      <li><a href="#">maulana</a></li>
+                      <li><a href="#">malik</a></li>
+                      <li><a href="#">ibrahim</a></li>
                     </ul>
                   </div>
                 </div>
@@ -245,9 +264,9 @@
           </div>
           <div class="col-md-8 col-sm-12 col-xs-12 no-page-padding">
             <div class="featured">
-              <ul class="nav nav-tabs no-padding">
+              <ul class="nav nav-tabs">
                 <li role="presentation" class="active"><a href="#" class="garisbawah text-primary">Buku terbaru</a></li>
-                <li role="presentation" class="garisbawah"><a href="#" class="garisbawah">Buku Populer</a></li>
+                <li role="presentation"><a href="#">Buku Populer</a></li>
               </ul>
               <ul class="content">
                 <li>
@@ -516,6 +535,13 @@
       </section>
     </footer>
 
+    <script type="text/javascript">
+      function parallax(){
+        var prlx_lyr_1 = document.getElementById('layer');
+        prlx_lyr_1.style.top = (window.pageYOffset / 1.1 )+'px';
+      }
+        window.addEventListener("scroll", parallax, false);
+    </script>
     <script src="js/jquery.js"></script>
     <script src="js/parallax.min.js"></script>
     <script src="js/wow.min.js"></script>
